[package]
name = "proxy-ingres"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingres-stock"
path = "src/main.rs"

#[build-dependencies]
#pkg-config = "0.3.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.13.2"
config-file = "0.2.3"
derive_more = "0.99.16"
dotenv = "0.15.0"
#env_logger = "0.9.0"
futures = "0.3.16"
reqwest = { version = "0.11.4", features = ["blocking","json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.87"


